# angel

./: .gitignore  Cargo.toml  Makefile  README.md  core.go  go.mod  go.sum  launchctl_print.txt  main.go  rustfmt.toml
src/: angel.rs  cli.rs  config.rs  daemon.rs  display.rs  error.rs  launchctl.rs  lib.rs  main.go  main.rs  output.rs  parser.rs  styles.rs  types.rs
src/cmd/: edit.go  install.go  list.go  restart.go  show.go  start.go  status.go  stop.go  uninstall.go  version.go
src/cmd/launchctl/: launchctl.go  parser.go
src/commands/: bootout.rs  bootstrap.rs  disable.rs  enable.rs  install.rs  list.rs  mod.rs  print.rs  restart.rs  show.rs  start.rs  status.rs  stop.rs  uninstall.rs  version.rs
src/core/: angel.go  config.go  constants.go  daemon.go  daemonRegistry.go  help.go  styles.go  utils.go
src/core/config/: config.go
src/core/constants/: constants.go
src/core/launchctl/: launchctl.go
src/core/launchctl/parser/: parser.go
src/core/styles/: styles.go
src/types/: daemon.go
tools/: schema.go
